# nomad-parser-example

./: .gitignore  .pylintrc  README.md  metadata.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: actions.yaml  python-actions.yaml
docs/: index.md
exampleparser/: __init__.py  __main__.py  metainfo.py  parser.py
exampleparser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
exampleparser/metainfo/: __init__.py  example.py
tests/: __init__.py  test_parser.py
tests/data/: NEXAFS_v2.json  example.out
